[package]
name = "order-book"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99"
fixnum = { version = "0.9", features = ["i128", "serde"] }
futures = "0.3"
serde = { version = "1.0.60", features = ["derive"] }
serde_json = "1"
stream_generator = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
